--- a/style.css
+++ b/style.css
@@ -125,6 +125,37 @@ a:hover {
 .article img {
   margin-bottom: 20px;
   border-radius: 5px;
-  max-width: 100%;
+  width: 100%;
   height: auto;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 24px;
+  }
+
+  h2, #featured-article h2  {
+    font-size: 22px;
+  }
+
+   #featured-article h2 {
+    font-size: 26px;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
+
+  p {
+    margin-bottom: 12px;
+    font-size: 16px;
+  }
+
+  main {
+    padding: 8px;
+  }
+ 
+  #featured-article {
+    padding: 24px;
+  }
 }
