--- a/style.css
+++ b/style.css
@@ -134,12 +134,12 @@ a:hover {
     font-size: 24px;
   }
 
-  h2, #featured-article h2  {
+  h2{
     font-size: 22px;
   }
 
    #featured-article h2 {
-    font-size: 26px;
+    font-size: 32px;
   }
 
   h3 {
